--- a/stopwatch.css
+++ b/stopwatch.css
@@ -1,5 +1,59 @@
 body{
+    margin: 0;
+    padding: 0;
     background-image: url('images/background.jpg');
     background-repeat: no-repeat;
-    background-size: unset;
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
+.watch{
+    text-align: center;
+    background-color: pink;
+    width: 100%;
+    max-width: 350px;
+    margin: 4rem auto;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+}
+
+.time{
+    font-size: 5rem;
+    font-weight: 300;
+    margin-bottom: 1rem;
+}
+
+.controls{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.controls button{
+    /*APPEARANCE OF BUTTONS*/
+    appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+    user-select: none;
+    cursor: pointer;
+
+    color: black;
+    font-size: 1rem;
+    background-color: rgba(189, 104, 136, 0.842);
+    margin: 0 0.5rem;
+    padding: 0.5rem 1rem;
+    border-radius:0.5rem ;
+
+     transition: 0.4s;
+
+}
+
+button:hover{
+    opacity:0.7 ;
+
+}
+button :active{
+    background-color: rgb(100, 7, 38);
 }
